<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_rviz2</name>
  <version>0.1.0</version>
  <description>
    ROS 2 launch scripts for rviz2
  </description>
  <maintainer email="nilsjor@kth.se">Nils Jörgensen</maintainer>
  <license>Apache License, Version 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
